Move warnings to top to stop blocking elements and place them within a structure. Also ensure noscript warning is always visible when needed

--- a/top_bar.css
+++ b/top_bar.css
@@ -1,10 +1,13 @@
-#top_navigation {
+header {
 	position: fixed;
 	top: 0px;
 	width: 100%;
+	z-index: 20;
+}
+
+#top_navigation {
 	height: 50px;
 	background-color: #ffffff;
-	z-index: 20;
 	box-shadow: 0px 1px 2px rgba(102, 102, 102, 0.3);
 
 	font-family: 'Century Gothic', CenturyGothic, 'Raleway', AppleGothic, sans-serif;
@@ -19,8 +22,17 @@
 	min-width: 1239px;
 }
 
-#content {
+.warning + #top_navigation {
+	position: relative;
+	top: 40px;
+}
+
+main {
 	margin-top: 75px;
+}
+
+body:has(.warning) main {
+	margin-top: 115px;
 }
 
 #insert {
@@ -143,6 +155,11 @@
 
 #institution_menu input[type="text"]:focus {
 	border-color: #1D84F6;
+}
+
+.warning + #top_navigation + #institution_menu {
+	position: fixed;
+	top: 90px;
 }
 
 #submit_institution_info {
@@ -300,14 +317,23 @@ li:hover {
 	position: absolute;
 }
 
-#server_warning {
+.warning {
 	position: fixed;
-	bottom: 0;
-	right: 0;
+	width: 100%;
+	margin: 0px;
+	font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;
+	font-size: 14px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 400;
+	line-height: 20px;
+	text-align: center;
+/*	bottom: 0;
+	right: 0;*/
 	background-color: #FFFAAD;
 	padding: 10px;
-	border-left: 1px solid #fecc7e;
-	border-top: 1px solid #fecc7e;
+/*	border-left: 1px solid #fecc7e;
+	border-top: 1px solid #fecc7e;*/
 	z-index: 100;
 }
 
